--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-hook-form": "^7.35.0",
-    "superjson": "^1.9.1"
+    "superjson": "^1.9.1",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.7",
@@ -39,7 +40,7 @@
     "prisma": "^4.3.1",
     "tailwindcss": "^3.0.23",
     "ts-node": "^10.9.1",
-    "typescript": "^4.6.0",
+    "typescript": "^4.8.2",
     "vercel": "^24.0.1"
   }
 }
